# csvtohttp

./: .flake8  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
csvtohttp/: __init__.py  cli.py  parser.py  request.py
src/csvtohttp/: cli.py  parser.py  request.py
src/tests/: template.mustache  test_request.py
tests/: __init__.py  conftest.py  fixtures.csv  test_cli.py  test_parser.py  test_request.py
tests/resources/: template.hbs  template_batch.hbs
