[metadata]
name = csvtohttp
version = 0.0.1

[options]
packages = find:
package_dir =
  =src
install_requires =
  aiohttp
  build
  pybars3
  pyyaml
tests_require =
  pytest
  pytest-aiohttp

include_package_data = True

[options.packages.find]
where = src
include = *

[options.package_data]
csvtohttp =
  *.yml
  *.json

[options.extras_require]
test =
  junitxml

[options.entry_points]
console_scripts =
  csvtohttp = csvtohttp.cli:main

[tool:pytest]
# Directory where pytest will search for tests
testpaths = tests

# Pattern for test file names
python_files = test_*.py

# Pattern for test class and function names
python_classes = Test*
python_functions = test_*

# Verbose output
addopts = -v
